--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -6,7 +6,7 @@
 	        </div>
 	        <div class="col colviewbestiesname">
 	        	<h2 style="color: white"><b>{{name}}</b></h2>
-	            <p>Last Viewed @ {{last}}</p>
+	            <p style="color: white">Last Viewed @ {{last}}</p>
 	        </div>
 	    </div>
   		<div class="list">
@@ -17,23 +17,23 @@
 		  
 		  <label class="item item-input item-floating-label">
 		    <span class="input-label">Email</span>
-		    <input type="email" placeholder="Email" value="{{email}}" ng-model="profilemodel.email">
+		    <input type="email" class="profiletxt" placeholder="Email" ng-model="profilemodel.email">
 		  </label>
 		  <label class="item item-input item-floating-label">
 		    <span class="input-label">Age</span>
-		    <input type="text" placeholder="Age" value="{{age}}" ng-model="profilemodel.age">
+		    <input type="text" class="profiletxt" placeholder="Age" ng-model="profilemodel.age">
 		  </label>
 		  <label class="item item-input item-floating-label">
 		    <span class="input-label">Address</span>
-		    <input type="text" placeholder="Address" value="regAddress" ng-model="profilemodel.address">
+		    <input type="text" class="profiletxt" placeholder="Address" ng-model="profilemodel.address">
 		  </label>
 		  <label class="item item-input item-floating-label">
 		    <span class="input-label" >Hobbies</span>
-		    <input type="text" placeholder="Hobbies" value="hobbies" ng-model="profilemodel.hobbies">
+		    <input type="text" class="profiletxt" placeholder="Hobbies" ng-model="profilemodel.hobbies">
 		  </label>
 		  <label class="item item-input item-floating-label">
 		    <span class="input-label">Your secret Answer For Last 3 Digit Of Surname</span>
-		    <input type="text" placeholder="Your secret Answer For Last 3 Digit Of Surname"  ng-model="profilemodel.fvans">
+		    <input type="text" class="profiletxt" placeholder="Your secret Answer For Last 3 Digit Of Surname" ng-model="profilemodel.fvans">
 		  </label>
 		  <button class="button button-block button-calm" ng-click="submitefork()">
 			  Change Your Info
