--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,7 +2,7 @@
   	<ion-content class="contentProfile">
   		<div class="row">
 	        <div class="col colviewbestiesimage Profileimage">
-	            <img src="{{pic}}" class=" animated fadeIn" width="100" height="100">
+	            <img src="{{pic}}" class=" animated fadeIn" width="100" height="100" ng-model="my.image" ng-click="chooseOptionToChangePic()">
 	        </div>
 	        <div class="col colviewbestiesname">
 	        	<h2 style="color: white"><b>{{name}}</b></h2>
