--- a/www/templates/chat.html
+++ b/www/templates/chat.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Chat @">
+<ion-view view-title="Chat @ {{name}}">
   	<ion-content>
     	<div class="chatdiv">
     		<div class="chattexts">
