--- a/www/templates/viewinmap.html
+++ b/www/templates/viewinmap.html
@@ -1,4 +1,4 @@
-<ion-view view-title="PID In Map">
+<ion-view view-title="Locating... {{name}}">
   	<ion-content>
     	<div id="map"></div>
     </ion-content>
