--- a/www/templates/viewinmap.html
+++ b/www/templates/viewinmap.html
@@ -3,6 +3,6 @@
     	<div id="map"></div>
     </ion-content>
     <ion-footer-bar class="bar-dark">
-      <a class="button button-icon icon ion-navigate" style="font-size: 10px">{{useraddress}}</a>
+      <a class="button button-icon icon ion-navigate" href="javascript:location.reload()" style="font-size: 10px">{{useraddress}}</a>
     </ion-footer-bar>
 </ion-view>
