--- a/www/css/style.css
+++ b/www/css/style.css
@@ -417,6 +417,7 @@ div.cardnotmeet{
 .chattextnbtn{
   position: relative;
   bottom: 0;
+  padding-bottom: 20%;
   width: 100%;
 }
 .chatfrom{/*sending the user*/
@@ -427,21 +428,21 @@ div.cardnotmeet{
   padding-top: 1%;
   padding-left: 4%;
   padding-right: 8%;
-  padding-bottom: 1%;
+  padding-bottom: 5px;/*1%;*/
   border-bottom-left-radius: 15px;
   border-top-left-radius: 15px;
   border-bottom-right-radius: 50px;
   animation-delay: 0.5s;
 }
 .chatto{/*receving from other*/
-  margin-right: 30%;
+  margin-right: 50%;
   margin-top: 2%;
   left: 0;
   background: #d3ffce;
   padding-top: 1%;
-  padding-right: 4%;
+  padding-right: 8%;
   padding-left: 8%;
-  padding-bottom: 1%;
+  padding-bottom: 5px;/*1%;*/
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   border-bottom-left-radius: 50px;
@@ -449,13 +450,26 @@ div.cardnotmeet{
 }
 .chattextbox{
   width: 100%;
+  padding-bottom: 10%;
 }
 .chatbtn{
   background: none;
-  border-radius: 40px;
+  border-radius: 20px;
+  padding-bottom: 10%;
+  margin-bottom: 10%;
 }
 .chatbtndiv{
   text-align: right;
+  padding-bottom: 10%;
+  margin-bottom: 10%;
+}
+img.sendchatbtn{
+  margin-bottom: 20px;
+  padding-bottom: 5%;
+}
+button.button.chatbtn{
+  background:none;
+  background-color: none;
 }
 
 /*privacy*/
