--- a/www/templates/abstractpages/sidemenus.html
+++ b/www/templates/abstractpages/sidemenus.html
@@ -44,7 +44,7 @@
         <!-- <a href="#/event/attendees" class="item constColor a6" style="color: #ffffff" menu-close><span class="icon ion-android-globe"></span>&nbsp;&nbsp;Contact Us</a> -->
         
         <a href="#" ng-click="shareapp()" class="item constColor a7" style="color: #ffffff" menu-close><span class="icon ion-paper-airplane"></span>&nbsp;&nbsp;Share App</a>
-        <a href="#/app/comments" class="item constColor a8" style="color: #ffffff" menu-close><span class="icon ion-chatboxes"></span>&nbsp;&nbsp;Comments</a>
+        <!-- <a href="#/app/comments" class="item constColor a8" style="color: #ffffff" menu-close><span class="icon ion-chatboxes"></span>&nbsp;&nbsp;Comments</a> -->
         <a href="#/app/about" class="item constColor a9" style="color: #ffffff" menu-close><span class="icon ion-at"></span>&nbsp;&nbsp;About</a>
         <a href="#/app/privacy" class="item constColor a10" style="color: #ffffff" menu-close><i class="icon ion-android-cloud-circle"></i>&nbsp;&nbsp;Privacy Policy</a>
         <a class="item constColor a11" style="color: #ffffff" menu-close>&nbsp;</a>
