--- a/www/templates/tabs/home.html
+++ b/www/templates/tabs/home.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Home" class="animated zoomIn">
-  <ion-content>
+  <ion-content ng-init="initBesties()">
     
     <!-- <div class="list list-inset searchhead">
       <label class="item item-input">
