--- a/www/css/style.css
+++ b/www/css/style.css
@@ -224,6 +224,7 @@ border-color: transparent;
     display: block;
     border-radius: 100px;
     margin-left: 10%;
+    margin-top: 5%;
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
     background-color: #222446;
