--- a/www/templates/comments.html
+++ b/www/templates/comments.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Comments">
-  	<ion-content>
-    	<div id="disqus_thread"></div>
+  	<ion-content class="IonContnetCommentsPanel">
+    	<!-- <div id="disqus_thread"></div> -->
+    	<div class="CommentsPanel">Wait A <br>moment...</div>
     </ion-content>
 </ion-view>
