--- a/www/templates/comments.html
+++ b/www/templates/comments.html
@@ -1,6 +1,9 @@
 <ion-view view-title="Comments">
   	<ion-content class="IonContnetCommentsPanel">
     	<!-- <div id="disqus_thread"></div> -->
-    	<div class="CommentsPanel">Wait A <br>moment...</div>
+    	<div class="CommentsPanel">Wait A <br>moment...<br>
+    	<button class="button button-block button-calm" ng-click="clicktocomment()">
+			  OR Try Me
+		  </button></div>
     </ion-content>
 </ion-view>
