--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,11 +1,11 @@
 <ion-view view-title="About Besties">
-  	<ion-content scroll="false" id="abcd">
+  	<ion-content class="contentProfile"  scroll="false" id="abcd">
   		<aboutbod>
   			<div class="aboutdiv">
   				<img src="img/ionic.png" class="aboutimg">
-  				<h6>v_1.0.0 Beta &copy;</h6>
-  				<p>Find Your Besties is the production based beta version of app for finding the friends who near you. This app have the permission for contacts, network, and your desired credentials. For more information go directly Privacy Policy page.</p>
-  				<p>2016, Product By j.</p>
+  				<h6 class="abouth6">v_1.0.0 Beta &copy;</h6>
+  				<p class="aboutp">Find Your Besties is the production based beta version of app for finding the friends who near you. This app have the permission for contacts, network, and your desired credentials. For more information go directly Privacy Policy page.</p>
+  				<p class="aboutp">2016, Product By j.</p>
   				<h4 class="aboutweb">www.mydomain.com</h4>
   			</div>
   		</aboutbod>
