--- a/www/templates/abstractpages/contactlist.html
+++ b/www/templates/abstractpages/contactlist.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-	<ion-header-bar	 align-title="center" class="bar-positive">
+	<ion-header-bar	 align-title="center" class="bar-positive modelbar">
 	  <div class="buttons">
 	  	<button class="button icon ion-loop" ng-click="calltoupdate()"></button>
 	  </div>
@@ -8,7 +8,7 @@
 	    <button class="button icon ion-close-circled" ng-click="closeModal()"></button>
 	  </div>
 	</ion-header-bar>
-	<ion-content>
+	<ion-content  class="contentProfile" >
 	  	<input type="search"
         placeholder=" Filter contacts by name" style="width: 100%" 
         ng-model="search">
