--- a/www/templates/tabs/tab.html
+++ b/www/templates/tabs/tab.html
@@ -1,16 +1,16 @@
-<ion-tabs class="tabs-icon-top tabs-striped tabs-color-royal tabs-color-light">
+<ion-tabs class="tabs-icon-top tabs-striped tabs-color-royal  contentProfile" ><!-- tabs-color-light -->
 
    	 
 
-    	<ion-tab title="Home" icon="ion-arrow-shrink" ui-sref="app.home.room">
+    	<ion-tab class="tabss" title="Home" icon="ion-arrow-shrink" ui-sref="app.home.room">
       	<ion-nav-view name="home-tab"></ion-nav-view>
     	</ion-tab>
 
-    	<ion-tab title="Invitation" icon="ion-wand" ui-sref="app.home.invitation">
+    	<ion-tab class="tabss" title="Invitation" icon="ion-wand" ui-sref="app.home.invitation">
       	<ion-nav-view name="invitation-tab"></ion-nav-view>
     	</ion-tab>
     
-    	<ion-tab title="Last Meet" icon="ion-android-wifi" ui-sref="app.home.lastmeet">
+    	<ion-tab class="tabss" title="Last Meet" icon="ion-android-wifi" ui-sref="app.home.lastmeet">
       	<ion-nav-view name="lastmeet-tab"></ion-nav-view>
     	</ion-tab>
 
