--- a/www/templates/chat.html
+++ b/www/templates/chat.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Chat @ {{name}}">
-  	<ion-content>
+  	<ion-content class="contentProfile">
     	<div class="chatdiv">
     		<div class="chattexts">
     			<!-- <div class="chatfrom">
@@ -11,11 +11,11 @@
                 <div ng-repeat="m in messages">
     			<div class="chatfrom" ng-if="me == m.sendby && ucontact == m.receivedby">
     				<p>{{m.text}}</p>
-                    <small>{{timeby(m.timestamp)}}</small>
+                    <small>{{timeby(m.timestamp)}}<!-- &nbsp;<i class="icon ion-trash-a" ng-click="trash(m.$id)"></i> --></small>
     			</div>
     			<div class="chatto"  ng-if="ucontact == m.sendby && me == m.receivedby">
     				<p>{{m.text}}</p>
-                    <small>{{timeby(m.timestamp)}}</small>
+                    <small>{{timeby(m.timestamp)}}<!-- &nbsp;<i class="icon ion-trash-a" ng-click="trash(m.$id)"></i> --></small>
     			</div>
                 </div>
     		</div>
@@ -31,15 +31,17 @@
             
     	</div>
     </ion-content>
-    <ion-footer-bar align-title="left" class="bar"><!--  style="color: #323569;background-color: #323569" -->
-      <div class="row">
+    <ion-footer-bar align-title="left" class="bar" style="color: #323569;background-color: #323569" ><!--  style="color: #323569;background-color: #323569" -->
+    <input type="text" class="chattextbox2" id="chatinput" name="chat" ng-model="chat.text" placeholder="Your Message To {{name}}"> 
+    <button class="button chatbtn2" ng-click="sendit()"><i class="icon ion-paper-airplane sendchatbtn2"></i><!-- <img src="img/sendmsg.png" width="30" class="sendchatbtn2" height="30"> --></button>
+      <!-- <div class="row">
         <div class="col col-80">
             <input type="text" class="chattextbox" id="chatinput" name="chat" ng-model="chat.text" placeholder="Your Message To {{name}}"> 
         </div>
         <div class="col col-20 chatbtndiv">
             <button class="button chatbtn" ng-click="sendit()"><img src="img/sendmsg.png" width="30" class="sendchatbtn" height="30"></button>
         </div>
-      </div>
+      </div> -->
     </ion-footer-bar>
 
 </ion-view>
