--- a/www/templates/privacy.html
+++ b/www/templates/privacy.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Privacy Policy">
-  	<ion-content>
+  	<ion-content class="contentProfile"  >
     	<div class="row">
     		<div class="col col-100">
     			<p class="privacyp1"><span class="firstcharacter">P</span>rivacy is the ability of an individual or group to seclude themselves, or information about themselves, and thereby express themselves selectively. The boundaries and content of what is considered private differ among cultures and individuals, but share common themes. When something is private to a person, it usually means that something is inherently special or sensitive to them. The domain of privacy partially overlaps security (confidentiality), which can include the concepts of appropriate use, as well as protection of information. Privacy may also take the form of bodily integrity.</p>
@@ -7,7 +7,7 @@
     	</div>
     	<div class="row">
     		<div class="col col-100">
-    			<h3>Terms & Condition</h3>
+    			<h3 class="privacyterms">Terms & Condition</h3>
     			<p class="privacyp2">
 	    			<span class="firstcharacter">O</span>ur Services are very diverse, so sometimes additional terms or product requirements (including age requirements) may apply. Additional terms will be available with the relevant Services, and those additional terms become part of your agreement with us if you use those Services.<br>
 	    			You must follow any policies made available to you within the Services.<br>
