--- a/www/templates/searchfriends.html
+++ b/www/templates/searchfriends.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Search Besties">
-  <ion-content scroll="false">
+  <ion-content scroll="false" class="contentProfile" >
     <h2 class="title text-center" style="margin-top: 3%">Find Your Besties</h2>
     <div class="list list-inset searchhead">
       <label class="item item-input">
