--- a/www/templates/tabs/invitation.html
+++ b/www/templates/tabs/invitation.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Invitation">
-<ion-content ng-init="findInvitationinit()">
+<ion-content class="contentProfile" ng-init="findInvitationinit()">
 	<ion-list>
       <div class="item item-divider">
         A <i class="icon ion-android-people"></i> friend(s) invited you,
