--- a/www/templates/tabs/lastmeet.html
+++ b/www/templates/tabs/lastmeet.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Last Meet">
-<ion-content>
+<ion-content class="contentProfile">
               <!-- List of Invitations -->
     <ion-list>
       <div class="item item-divider">
