--- a/www/templates/viewbesties.html
+++ b/www/templates/viewbesties.html
@@ -1,13 +1,13 @@
 <ion-view view-title="Profile {{name}}"> 
-  <ion-content>
+  <ion-content class="contentProfile" >
     
     <div class="row">
         <div class="col colviewbestiesimage">
             <img src="{{pic}}" class=" animated fadeIn" width="100" height="100">
         </div>
         <div class="col colviewbestiesname">
-        	<h2><b>{{name}}</b> {{name}} </h2>
-            <p>Last Viewed @ {{last}}</p>
+        	<h2><b class="viewbestiesnameb">{{name}}</b></h2>
+            <p class="viewbestiesnameplast">Last Viewed @ {{last}}</p>
             <div ng-click="navigatethis('{{id}}')"><h3><span class="icon ion-location navigatelocationview animated fadeIn"></span></h3></div>
         </div>
     </div>
@@ -22,11 +22,11 @@
 
     <div class="list">
       <div class="item item-divider">
-        <p><b>Detail</b></p>
+        <p><b class="viewbestiesnamepdetail">Detail</b></p>
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col viewbestiesnamediv">
         {{name}}<br>
         Member Since, {{created}}
       </div>
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col viewbestiesnamedivadd">
         <span class="icon ion-location"></span> {{meetdate}} {{'at'+meetaddress}}
       </div>
     </div><br><br>
