--- a/www/templates/tabs/home.html
+++ b/www/templates/tabs/home.html
@@ -8,6 +8,25 @@
       </label>
     </div> -->
 
+    <div class="card homecard">
+      <div class="item item-divider homecarddiv">
+        Thoughts Of The Day...
+      </div>
+      <div class="item item-text-wrap homecardwrap">
+        Drink Water Live Long.
+        <!-- <ion-slides  options="options" slider="data.slider">
+          <ion-slide-page style="height: 100px">
+            <div class="box blue"><h1>BLUE</h1></div>
+          </ion-slide-page>
+          <ion-slide-page>
+            <div class="box yellow"><h1>YELLOW</h1></div>
+          </ion-slide-page>
+          <ion-slide-page>
+            <div class="box pink"><h1>PINK</h1></div>
+          </ion-slide-page>
+        </ion-slides> -->
+      </div>
+    </div>
 
 
 
