--- a/www/templates/tabs/home.html
+++ b/www/templates/tabs/home.html
@@ -80,10 +80,10 @@
       </div>
 
     </div>
-    <ion-refresher
+    <!-- <ion-refresher
       pulling-text="Finding more besties..."
       on-refresh="doRefresh()">  
-    </ion-refresher>
+    </ion-refresher> -->
   </div>
 
     <!-- <div class="list card cardcc">
