--- a/www/templates/viewbesties.html
+++ b/www/templates/viewbesties.html
@@ -8,7 +8,7 @@
         <div class="col colviewbestiesname">
         	<h2><b class="viewbestiesnameb">{{name}}</b></h2>
             <p class="viewbestiesnameplast">Last Viewed @ {{last}}</p>
-            <div ng-click="navigatethis('{{id}}')"><h3><span class="icon ion-location navigatelocationview animated fadeIn"></span></h3></div>
+            <!-- <div ng-click="navigatethis('{{id}}')"><h3><span class="icon ion-location navigatelocationview animated fadeIn"></span></h3></div> -->
         </div>
     </div>
 
@@ -20,9 +20,9 @@
       <div class="col col-25 mediabanner" ng-click="bestieswhatsapp()"><img src="img/whatsapp.png" width="50" height="50"><br>Whatsapp</div>
     </div>
 
-    <div class="list">
+    <div class="list viewbestiesdiv">
       <div class="item item-divider">
-        <p><b class="viewbestiesnamepdetail">Detail</b></p>
+        <p class="viewbestiesdivp"><b class="viewbestiesnamepdetail">Detail</b></p>
       </div>
     </div>
     <div class="row">
@@ -32,14 +32,14 @@
       </div>
     </div>
     
-    <div class="list">
+    <div class="list viewbestiesdiv">
       <div class="item item-divider">
-        <p><b>Last Meet</b></p>
+        <p class="viewbestiesdivp"><b>Last Meet</b></p>
       </div>
     </div>
     <div class="row">
       <div class="col viewbestiesnamedivadd">
-        <span class="icon ion-location"></span> {{meetdate}} {{'at'+meetaddress}}
+        <span class="icon ion-location"></span> {{meetdate}} {{'at '+meetaddress}}
       </div>
     </div><br><br>
     <!-- <div class="card">
