--- a/www/templates/abstractpages/contactlist.html
+++ b/www/templates/abstractpages/contactlist.html
@@ -13,12 +13,12 @@
         placeholder=" Filter contacts by name" style="width: 100%" 
         ng-model="search">
 
-
+        <p>{{hhdd | json}}</p>
   		<!-- <ion-list show-delete="data.showDelete" show-reorder="data.showReorder"> -->
         <ion-list>
         <!-- <ion-item ng-repeat="item in Contactitems | searchContacts:search | limitTo:listlength"
-              class="item-thumbnail-left"> href="#/app/contacts/{{contact.id}}"-->
-           <ion-item ng-hide="showContactitems" ng-repeat="contact in Contactitems | searchContacts:search | limitTo:listlength"
+              class="item-thumbnail-left"> href="#/app/contacts/{{contact.id}}" ng-hide="showContactitems" -->
+           <ion-item ng-repeat="contact in Contactitems | searchContacts:search | limitTo:listlength"
                      item="item"
                       class="item-remove-animate">
 
