--- a/www/templates/abstractpages/contactlist.html
+++ b/www/templates/abstractpages/contactlist.html
@@ -13,7 +13,7 @@
         placeholder=" Filter contacts by name" style="width: 100%" 
         ng-model="search">
 
-        <p>{{hhdd | json}}</p>
+        <!-- <p>{{hhdd | json}}</p> -->
   		<!-- <ion-list show-delete="data.showDelete" show-reorder="data.showReorder"> -->
         <ion-list>
         <!-- <ion-item ng-repeat="item in Contactitems | searchContacts:search | limitTo:listlength"
